--- a/client/src/App.css
+++ b/client/src/App.css
@@ -73,3 +73,26 @@ body {
     cursor: pointer;
     color: #873e23;
 }
+
+.cart {
+    border-collapse: collapse;
+    width: 90%;
+    margin: 18px auto;
+}
+
+.cart td, .cart th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+
+.cart tr:nth-child(even){background-color: #f2f2f2;}
+
+.cart tr:hover {background-color: #ddd;}
+
+.cart th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #873e23;
+    color: white;
+}  
